--- a/about-us.html
+++ b/about-us.html
@@ -91,11 +91,11 @@
     <!-- ========================
        page title 
     =========================== -->
-    <section class="page-title page-title-layout1 text-center bg-overlay bg-overlay-gradient bg-parallax"  style="background-size: auto;">
+    <!-- <section class="page-title page-title-layout1 text-center bg-overlay bg-overlay-gradient bg-parallax"  style="background-size: auto;">
       <div class="bg-img"><img src="assets/images/banners/22.jpg" alt="background"></div>
       <div class="container">
         <div class="row">
-          <!-- <div class="col-sm-12 col-md-12 col-lg-12 col-xl-6 offset-xl-3">
+          <div class="col-sm-12 col-md-12 col-lg-12 col-xl-6 offset-xl-3">
             <h1 class="pagetitle__heading">Help Challenge Critical Activities</h1>
             <p class="pagetitle__desc">We are experienced professionals who understand that It services is changing, and
               are true partners who care about your success.</p>
@@ -116,11 +116,14 @@
                 <li class="breadcrumb-item active" aria-current="page">about</li>
               </ol>
             </nav>
-          </div> -->
+          </div>
         </div>
       </div>
-    </section>
-
+    </section> -->
+    <section class="services-layout2 services-carousel services-carousel-2 pt-130 pb-60"
+    style="background-image:url(assets/images/banners/22.jpg); background-size: contain; background-position: center; background-repeat: no-repeat;">
+    
+  </section><!-- /.Services Layout 2 -->
     <!-- ========================
       Secondary Nav
     =========================== -->
@@ -138,7 +141,7 @@
         </div>
       </div>
     </section> -->
-    <section class="secondary-nav secondary-nav-internal-navigation sticky-top py-0">
+    <section class="secondary-nav secondary-nav-internal-navigation sticky-top py-0" style="background-color: #335a00;">
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -197,12 +200,12 @@
                 <div class="blockquote__avatar">
                   <img src="assets/images/testimonials/thumbs/1.png" alt="thumb">
                 </div>
-                <div class="blockquote__content">
+                <!-- <div class="blockquote__content">
                   <h4 class="blockquote__title mb-0">As one of the world's largest ITService Providers with over 120
                     engineers and IT support staff are ready to help.
                   </h4>
-                </div><!-- /.blockquote__content -->
-              </blockquote><!-- /.blockquote -->
+                </div> -->
+              </blockquote>
             </div><!-- /.about-img -->
           </div><!-- /.col-lg-6 -->
         </div><!-- /.row -->
