--- a/home-modern.html
+++ b/home-modern.html
@@ -262,10 +262,15 @@
       <!-- ========================
         Services Carousel
     =========================== -->
-    <section class="services-layout2 services-carousel services-carousel-2 pt-130 pb-60"
+    <!-- <section class="services-layout2 services-carousel services-carousel-2 pt-130 pb-60"
       style="background-image:url(assets/images/backgrounds/op2.png); background-size: contain; background-repeat: no-repeat;">
       
-    </section><!-- /.Services Layout 2 -->
+    </section> -->
+    <!-- /.Services Layout 2 -->
+    <section class="services-layout2 services-carousel services-carousel-2 pt-130 pb-60">
+      <img src="assets/images/backgrounds/op2.png" alt="">
+    </section>
+    
     <!-- ======================
       Blog Grid
     ========================= -->
