--- a/abcretrate.html
+++ b/abcretrate.html
@@ -75,13 +75,13 @@
                 <a href="about-us.html" class="nav__item-link">Who we are ! </a>
               </li>
               <li class="nav__item">
-                <a href="contact-us.html" class="nav__item-link">Initiative</a>
+                <a href="initiative.html" class="nav__item-link">Initiative</a>
               </li>
             </ul>
           </div>
           <ul class="navbar-actions list-unstyled mb-0 d-flex align-items-center">
             <li class="d-none d-xl-block">
-              <a href="request-quote.html" class="btn action__btn-contact">Connect With Nature</a>
+              <a href="contact-us.html" class="btn action__btn-contact">Connect With Nature</a>
             </li>
           </ul>
         </div><!-- /.container -->
