--- a/about-us.html
+++ b/about-us.html
@@ -75,13 +75,13 @@
                 <a href="about-us.html" class="nav__item-link active">Who we are ! </a>
               </li>
               <li class="nav__item">
-                <a href="contact-us.html" class="nav__item-link">Initiative</a>
+                <a href="initiative.html" class="nav__item-link">Initiative</a>
               </li>
             </ul>
           </div>
           <ul class="navbar-actions list-unstyled mb-0 d-flex align-items-center">
             <li class="d-none d-xl-block">
-              <a href="request-quote.html" class="btn action__btn-contact">Connect With Nature</a>
+              <a href="contact-us.html" class="btn action__btn-contact">Connect With Nature</a>
             </li>
           </ul>
         </div>
@@ -248,7 +248,7 @@
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-6 offset-xl-1">
               <div class="banner__content">
                 <div class="bg-img"><img src="assets/images/backgrounds/3.png" alt="background"></div>
-                <div class="scroll__icon"><i class="icon-mouse"></i></div>
+                <div class="scroll__icon" style="color: #000; border:2px solid #000;"l><i class="icon-mouse"></i></div>
                 <div class="row heading heading-light">
                   <div class="col-sm-12">
                     <h3 class="heading__title mb-30">Decades of Agri Innovations</h3>
