--- a/extra.html
+++ b/extra.html
@@ -403,3 +403,356 @@
               </div><!-- /.row -->
             </div><!-- /.container -->
           </section><!-- /.History Timeline -->
+
+          <!-- =========================
+      Pricing  
+      =========================== -->
+    <section class="pricing pt-0">
+      <div class="container">
+        <div class="row row-no-gutter pricing-wrapper">
+          <!-- pricing item #1-->
+          <div class="col-sm-12 col-md-4 col-lg-4">
+            <div class="pricing-item d-flex flex-column justify-content-between">
+              <div>
+                <div class="pricing__top">For Small Teams</div>
+                <div class="pricing__header">
+                  <h5 class="pricing__title">Starter Plan</h5>
+                  <div class="pricing__price">
+                    <span class="pricing__currency">$</span><span>49,99</span><span
+                      class="pricing__time">/Monthly</span>
+                  </div>
+                </div><!-- /.pricing__header  -->
+                <div class="pricing__content">
+                  <p class="pricing__desc">Fast project turnaround time, substantial cost savings & quality
+                    standards.
+                  </p>
+                  <ul class="pricing__list list-items list-items-layout2 list-unstyled">
+                    <li>Five Brand Monitors</li>
+                    <li>Five Keyword Monitors</li>
+                    <li>Full Social Profiles</li>
+                  </ul>
+                </div><!-- /.pricing__content  -->
+              </div>
+              <div class="pricing__footer">
+                <a href="#" class="btn btn__secondary btn__block btn__icon">
+                  <span>Purchase Now</span>
+                  <i class="icon-arrow-right"></i>
+                </a>
+              </div><!-- /.pricing__footer  -->
+            </div><!-- /.pricing-item -->
+          </div><!-- /.col-lg-4 -->
+          <!-- pricing item #2-->
+          <div class="col-sm-12 col-md-4 col-lg-4">
+            <div class="pricing-item d-flex flex-column justify-content-between">
+              <div>
+                <div class="pricing__top">For Small And Beginning Business</div>
+                <div class="pricing__header">
+                  <h5 class="pricing__title">Basic Plan</h5>
+                  <div class="pricing__price">
+                    <span class="pricing__currency">$</span><span>79,99</span><span
+                      class="pricing__time">/Monthly</span>
+                  </div>
+                </div><!-- /.pricing__header  -->
+                <div class="pricing__content">
+                  <p class="pricing__desc">Fast project turnaround time, substantial cost savings & quality
+                    standards.
+                  </p>
+                  <ul class="pricing__list list-items list-items-layout2 list-unstyled">
+                    <li>Five Brand Monitors</li>
+                    <li>Five Keyword Monitors</li>
+                    <li>Full Social Profiles</li>
+                    <li>500 Search Results </li>
+                  </ul>
+                </div><!-- /.pricing__content  -->
+              </div>
+              <div class="pricing__footer">
+                <a href="#" class="btn btn__primary btn__block btn__icon">
+                  <span>Purchase Now</span>
+                  <i class="icon-arrow-right"></i>
+                </a>
+              </div><!-- /.pricing__footer  -->
+            </div><!-- /.pricing-item -->
+          </div><!-- /.col-lg-4 -->
+          <!-- pricing item #3-->
+          <div class="col-sm-12 col-md-4 col-lg-4">
+            <div class="pricing-item d-flex flex-column justify-content-between">
+              <div>
+                <div class="pricing__top">For Big Teams And Enterprise</div>
+                <div class="pricing__header">
+                  <h5 class="pricing__title">Advanced Plan</h5>
+                  <div class="pricing__price">
+                    <span class="pricing__currency">$</span><span>99,99</span><span
+                      class="pricing__time">/Monthly</span>
+                  </div>
+                </div><!-- /.pricing__header  -->
+                <div class="pricing__content">
+                  <p class="pricing__desc">Fast project turnaround time, substantial cost savings & quality
+                    standards.
+                  </p>
+                  <ul class="pricing__list list-items list-items-layout2 list-unstyled">
+                    <li>Five Brand Monitors</li>
+                    <li>Five Keyword Monitors</li>
+                    <li>Basic Quota </li>
+                    <li>PDF reports</li>
+                    <li>Full Social Profiles</li>
+                    <li>500 Search Results </li>
+                  </ul>
+                </div><!-- /.pricing__content  -->
+              </div>
+              <div class="pricing__footer">
+                <a href="#" class="btn btn__secondary btn__block btn__icon">
+                  <span>Purchase Now</span>
+                  <i class="icon-arrow-right"></i>
+                </a>
+              </div><!-- /.pricing__footer  -->
+            </div><!-- /.pricing-item -->
+          </div><!-- /.col-lg-4 -->
+        </div><!-- /.row -->
+        <div class="row">
+          <div class="col-12">
+            <p class="text__link text-center mt-10 mb-0">Innovative and Sustainable Solutions,
+              <a href="#" class="btn btn__link btn__secondary btn__icon px-0">
+                <span>Find Your Solution</span> <i class="icon-arrow-right"></i>
+              </a>
+            </p>
+          </div><!-- /.col-12 -->
+        </div><!-- /.row -->
+      </div><!-- /.container -->
+    </section><!-- /.pricing  -->
+
+
+
+
+
+
+
+
+
+        
+
+    <!-- =====================
+           Clients
+    ======================== -->
+    <section class="clients border-top pt-50 pb-50">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-12">
+            <div class="slick-carousel"
+              data-slick='{"slidesToShow": 6, "arrows": false, "dots": false, "autoplay": true,"autoplaySpeed": 2000, "infinite": true, "responsive": [ {"breakpoint": 992, "settings": {"slidesToShow": 4}}, {"breakpoint": 767, "settings": {"slidesToShow": 3}}, {"breakpoint": 480, "settings": {"slidesToShow": 2}}]}'>
+              <div class="client">
+                <img src="assets/images/clients/1.png" alt="client">
+                <img src="assets/images/clients/1.png" alt="client">
+              </div><!-- /.client -->
+              <div class="client">
+                <img src="assets/images/clients/2.png" alt="client">
+                <img src="assets/images/clients/2.png" alt="client">
+              </div><!-- /.client -->
+              <div class="client">
+                <img src="assets/images/clients/3.png" alt="client">
+                <img src="assets/images/clients/3.png" alt="client">
+              </div><!-- /.client -->
+              <div class="client">
+                <img src="assets/images/clients/4.png" alt="client">
+                <img src="assets/images/clients/4.png" alt="client">
+              </div><!-- /.client -->
+              <div class="client">
+                <img src="assets/images/clients/5.png" alt="client">
+                <img src="assets/images/clients/5.png" alt="client">
+              </div><!-- /.client -->
+              <div class="client">
+                <img src="assets/images/clients/6.png" alt="client">
+                <img src="assets/images/clients/6.png" alt="client">
+              </div><!-- /.client -->
+              <div class="client">
+                <img src="assets/images/clients/7.png" alt="client">
+                <img src="assets/images/clients/7.png" alt="client">
+              </div><!-- /.client -->
+            </div><!-- /.carousel -->
+          </div><!-- /.col-12 -->
+        </div><!-- /.row -->
+      </div><!-- /.container -->
+    </section>
+    <!-- /.clients -->
+
+
+
+
+
+
+
+
+
+
+
+    <!-- service item #3 -->
+    <div class="service-item">
+      <div class="service__content">
+        <div class="service__icon">
+          <i class="icon-cloud-computing"></i>
+        </div><!-- /.service__icon -->
+        <h4 class="service__title">Cloud Computing<br> Services</h4>
+        <p class="service__desc">Cloud computing is on-demand availability of computer system resources,
+          especially data storage computing power, without direct active management by the user.</p>
+        <ul class="list-items list-unstyled mb-30">
+          <li>Private cloud services</li>
+          <li>Public cloud services</li>
+          <li>Hybrid cloud services</li>
+        </ul>
+        <a href="it-solutions-single.html" class="btn btn__secondary">
+          <span>Read More</span>
+          <i class="icon-arrow-right"></i>
+        </a>
+      </div><!-- /.service-content -->
+    </div><!-- /.service-item -->
+    <!-- service item #4 -->
+    <div class="service-item">
+      <div class="service__content">
+        <div class="service__icon">
+          <i class="icon-permission"></i>
+        </div><!-- /.service__icon -->
+        <h4 class="service__title">IT Consulting <br> Services</h4>
+        <p class="service__desc">TTrying to solve all your IT challenges internally can become costly and
+          a
+          major distraction, Leveraging knowledgeable IT consulting firms like ushelps business. </p>
+        <ul class="list-items list-unstyled mb-30">
+          <li>Scoping & planning</li>
+          <li>Process & system design</li>
+          <li>Project management support</li>
+        </ul>
+        <a href="it-solutions-single.html" class="btn btn__secondary">
+          <span>Read More</span>
+          <i class="icon-arrow-right"></i>
+        </a>
+      </div><!-- /.service-content -->
+    </div><!-- /.service-item -->
+    <!-- service item #5 -->
+    <div class="service-item">
+      <div class="service__content">
+        <div class="service__icon">
+          <i class="icon-code"></i>
+        </div><!-- /.service__icon -->
+        <h4 class="service__title">Software Dev<br> Services</h4>
+        <p class="service__desc">With shorter product cycles, innovation, and mergers contributing to
+          constant change, you are faced making business decisions every day to advance.</p>
+        <ul class="list-items list-unstyled mb-30">
+          <li>Implementation</li>
+          <li>Testing & documenting</li>
+          <li>Deployment & maintenance</li>
+        </ul>
+        <a href="it-solutions-single.html" class="btn btn__secondary">
+          <span>Read More</span>
+          <i class="icon-arrow-right"></i>
+        </a>
+      </div><!-- /.service-content -->
+    </div><!-- /.service-item -->
+    <!-- service item #6 -->
+    <div class="service-item">
+      <div class="service__content">
+        <div class="service__icon">
+          <i class="icon-internet"></i>
+        </div><!-- /.service__icon -->
+        <h4 class="service__title">Backup & Recovery<br> Services</h4>
+        <p class="service__desc">While you can’t predict unexpected events, we’ll ensure the right
+          precautions are in place to minimize downtime and keep you moving in the right direction.</p>
+        <ul class="list-items list-unstyled mb-30">
+          <li>Compression & Deduplication</li>
+          <li>Duplication & Encryption</li>
+          <li>Multiplexing & Refactoring</li>
+        </ul>
+        <a href="it-solutions-single.html" class="btn btn__secondary">
+          <span>Read More</span>
+          <i class="icon-arrow-right"></i>
+        </a>
+      </div><!-- /.service-content -->
+    </div><!-- /.service-item -->
+
+
+
+
+
+    <div class="row">
+      <!-- Member #1 -->
+      <div class="col-sm-6 col-md-6 col-lg-3">
+        <div class="member">
+          <div class="member__img">
+            <img src="assets/images/team/4.jpg" alt="member img">
+            <div class="member__hover">
+              <div class="member__content-inner">
+                <ul class="social-icons justify-content-center list-unstyled mb-0">
+                  <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                  <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                </ul><!-- /.social-icons -->
+              </div><!-- /.member-content-inner -->
+            </div><!-- /.member-hover -->
+          </div><!-- /.member-img -->
+          <div class="member__info">
+            <h5 class="member__name">Richard Muldoone</h5>
+            <p class="member__desc">Legal Officer</p>
+          </div><!-- /.member-info -->
+        </div><!-- /.member -->
+      </div><!-- /.col-lg-3 -->
+      <!-- Member #2 -->
+      <div class="col-sm-6 col-md-6 col-lg-3">
+        <div class="member">
+          <div class="member__img">
+            <img src="assets/images/team/5.jpg" alt="member img">
+            <div class="member__hover">
+              <div class="member__content-inner">
+                <ul class="social-icons  justify-content-center list-unstyled mb-0">
+                  <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                  <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                </ul><!-- /.social-icons -->
+              </div><!-- /.member-content-inner -->
+            </div><!-- /.member-hover -->
+          </div><!-- /.member-img -->
+          <div class="member__info">
+            <h5 class="member__name">Maria Andaloro</h5>
+            <p class="member__desc">HR Officer</p>
+          </div><!-- /.member-info -->
+        </div><!-- /.member -->
+      </div><!-- /.col-lg-3 -->
+      <!-- Member #3 -->
+      <div class="col-sm-6 col-md-6 col-lg-3">
+        <div class="member">
+          <div class="member__img">
+            <img src="assets/images/team/6.jpg" alt="member img">
+            <div class="member__hover">
+              <div class="member__content-inner">
+                <ul class="social-icons justify-content-center list-unstyled mb-0">
+                  <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                  <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                </ul><!-- /.social-icons -->
+              </div><!-- /.member-content-inner -->
+            </div><!-- /.member-hover -->
+          </div><!-- /.member-img -->
+          <div class="member__info">
+            <h5 class="member__name">Marian Chris</h5>
+            <p class="member__desc">Global Sales</p>
+          </div><!-- /.member-info -->
+        </div><!-- /.member -->
+      </div><!-- /.col-lg-3 -->
+      <!-- Member #4 -->
+      <div class="col-sm-6 col-md-6 col-lg-3">
+        <div class="member">
+          <div class="member__img">
+            <img src="assets/images/team/7.jpg" alt="member img">
+            <div class="member__hover">
+              <div class="member__content-inner">
+                <ul class="social-icons justify-content-center list-unstyled mb-0">
+                  <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                  <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                </ul><!-- /.social-icons -->
+              </div><!-- /.member-content-inner -->
+            </div><!-- /.member-hover -->
+          </div><!-- /.member-img -->
+          <div class="member__info">
+            <h5 class="member__name">Jack Mudson</h5>
+            <p class="member__desc">Manager</p>
+          </div><!-- /.member-info -->
+        </div><!-- /.member -->
+      </div><!-- /.col-lg-3 -->
+    </div> <!-- /.row -->
