--- a/home-modern.html
+++ b/home-modern.html
@@ -75,13 +75,13 @@
                 <a href="about-us.html" class="nav__item-link">Who we are ! </a>
               </li>
               <li class="nav__item">
-                <a href="contact-us.html" class="nav__item-link">Initiative</a>
+                <a href="initiative.html" class="nav__item-link">Initiative</a>
               </li>
             </ul>
           </div>
           <ul class="navbar-actions list-unstyled mb-0 d-flex align-items-center">
             <li class="d-none d-xl-block">
-              <a href="request-quote.html" class="btn action__btn-contact">Connect With Nature</a>
+              <a href="contact-us.html" class="btn action__btn-contact">Connect With Nature</a>
             </li>
           </ul>
         </div>
@@ -259,7 +259,7 @@
         </div><!-- /.row -->
       </div><!-- /.container -->
     </section><!-- /.Banner layout 3 -->
-      <!-- ========================
+    <!-- ========================
         Services Carousel
     =========================== -->
     <!-- <section class="services-layout2 services-carousel services-carousel-2 pt-130 pb-60"
@@ -270,7 +270,7 @@
     <section class="services-layout2 services-carousel services-carousel-2 pt-130 pb-60">
       <img src="assets/images/backgrounds/op2.png" alt="">
     </section>
-    
+
     <!-- ======================
       Blog Grid
     ========================= -->
@@ -498,7 +498,7 @@
             <!-- Testimonial #3 -->
             <div class="testimonial-box">
               <div class="testimonial__thumb">
-                <img src="assets/images/testimonials/thumbs/3.png" alt="author thumb">
+                <img src="assets/images/icons/Marker.png" alt="author thumb">
                 <span class="pulsing-animation pulsing-animation-1"></span>
                 <span class="pulsing-animation pulsing-animation-2"></span>
                 <span class="pulsing-animation pulsing-animation-3"></span>
@@ -542,54 +542,66 @@
           </div><!-- /.col-12 -->
         </div><!-- /.row -->
       </div><!-- /.container -->
-      <div class="pb-100">
+      <!-- <div class="pb-100">
         <div class="bg-img"><img src="assets/images/backgrounds/2.jpg" alt="background"></div>
         <div class="container">
           <div class="cta d-flex align-items-center">
             <div class="cta__item d-flex align-items-center">
               <div class="cta__icon">
                 <i class="icon-programmer"></i>
-              </div><!-- /.cta__icon -->
+              </div>
               <div class="cta__content">
                 <h4 class="cta__title">Small/Growing Business!</h4>
                 <p class="cta__desc mb-0">Professional IT support packages tailored to align with your business
                   objectives
                   and meet your needs.</p>
-              </div><!-- /.cta__content -->
-            </div><!-- /.cta__item -->
+              </div>
+            </div>
             <div class="or-seperator">and</div>
             <div class="cta__item d-flex align-items-center">
               <div class="cta__content text-right">
                 <h4 class="cta__title">Enterprise Level Organization</h4>
                 <p class="cta__desc mb-0">Professional IT support packages tailored to align with your business
                   objectives and meet your needs.</p>
-              </div><!-- /.cta__content -->
+              </div>
               <div class="cta__icon">
                 <i class="icon-developer"></i>
-              </div><!-- /.cta__icon -->
-            </div><!-- /.cta__item -->
-          </div><!-- /.cta -->
-          <!-- <p class="text__link text-center mt-40 mb-0">IT Management Solutions for your Business,
+              </div>
+            </div>
+          </div>
+          <p class="text__link text-center mt-40 mb-0">IT Management Solutions for your Business,
             <a href="#" class="btn btn__link btn__secondary btn__icon px-0">
               <span>Explore Our Plans</span> <i class="icon-arrow-right"></i>
             </a>
-          </p> -->
-        </div><!-- /.container -->
-      </div>
+          </p>
+        </div>
+      </div> -->
     </section><!-- /.testimonials -->
-    <section class="services-layout2 services-carousel services-carousel-2 pt-130 pb-60"
-      style="background-image:url(assets/images/backgrounds/opbackground2.png); background-size: contain;">
+    <!-- <section class="services-layout2 services-carousel services-carousel-2 pt-130 pb-60"
+      style="background-image:url(assets/images/backgrounds/op3.jpg); background-size: contain; background-repeat: no-repeat;">
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-3">
             <div class="heading text-center mb-40">
               <h3 class="heading__title" style=" color: #375d00;">घर से अंतरराष्ट्रीय स्तर तक ||</h3>
-            </div><!-- /.heading -->
-          </div><!-- /.col-lg-6 -->
-        </div><!-- /.row -->
+            </div>
+          </div>
+        </div>
       </div>
-    </section><!-- /.Services Layout 2 -->
- <!-- ======================
+    </section> -->
+    <section class="services-layout2 services-carousel services-carousel-2 pt-130 pb-60">
+      <img src="assets/images/backgrounds/op3.jpg" alt="">]
+    </section>
+    <style>
+      .centered {
+        position: absolute;
+        top: 63%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        
+      }
+    </style>
+    <!-- ======================
       Blog Grid
     ========================= -->
     <section class="blog-grid pb-50">
