index page name changed

--- a/contact-us.html
+++ b/contact-us.html
@@ -39,7 +39,7 @@
       <nav class="navbar navbar-expand-lg sticky-navbar">
         <div class="container">
 
-          <a class="navbar-brand" href="home-modern.html">
+          <a class="navbar-brand" href="index.html">
             <img src="assets/images/logo/logo-light.png" class="logo-light" alt="logo">
             <img src="assets/images/logo/logo-dark.png" class="logo-dark" alt="logo">
           </a>
@@ -49,13 +49,13 @@
           <div class="collapse navbar-collapse" id="mainNavigation">
             <ul class="navbar-nav ml-auto">
               <li class="nav__item  has-dropdown">
-                <a href="home-modern.html"  class="nav__item-link active">Home</a>
+                <a href="index.html"  class="nav__item-link active">Home</a>
                 <!-- <ul class="dropdown-menu">
                   <li class="nav__item">
-                    <a href="home-modern.html" class="nav__item-link">Home Main</a>
+                    <a href="index.html" class="nav__item-link">Home Main</a>
                   </li>
                   <li class="nav__item">
-                    <a href="home-modern.html" class="nav__item-link">Home Modern</a>
+                    <a href="index.html" class="nav__item-link">Home Modern</a>
                   </li>
                   <li class="nav__item">
                     <a href="home-classic.html" class="nav__item-link">Home Classic</a>
@@ -205,12 +205,14 @@
     <!-- ========================= 
             Google Map
     =========================  -->
-    <section class="google-map py-0">
+    <!-- <section class="google-map py-0">
       <div id="map" class="height-500"></div>
       <script src="assets/js/google-map.js"></script>
       <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
-      <!-- CLICK HERE (https://developers.google.com/maps/documentation/embed/get-api-key) TO  LERAN MORE ABOUT GOOGLE MAPS API KEY -->
-    </section><!-- /.GoogleMap -->
+      
+    </section> -->
+    <!-- CLICK HERE (https://developers.google.com/maps/documentation/embed/get-api-key) TO  LERAN MORE ABOUT GOOGLE MAPS API KEY -->
+    <!-- /.GoogleMap -->
 
     <!-- ==========================
         contact layout 1
