--- a/about-us.html
+++ b/about-us.html
@@ -40,7 +40,7 @@
       <nav class="navbar navbar-expand-lg sticky-navbar">
         <div class="container">
 
-          <a class="navbar-brand" href="home-modern.html">
+          <a class="navbar-brand" href="index.html">
             <img src="assets/images/logo/logo-light.png" class="logo-light" alt="logo">
             <img src="assets/images/logo/logo-dark1.png" class="logo-dark" alt="logo">
           </a>
@@ -50,7 +50,7 @@
           <div class="collapse navbar-collapse" id="mainNavigation">
             <ul class="navbar-nav ml-auto">
               <li class="nav__item">
-                <a href="home-modern.html" class="nav__item-link ">Home</a>
+                <a href="index.html" class="nav__item-link ">Home</a>
               </li>
               <li class="nav__item  has-dropdown">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link">Collective Ventures</a>
@@ -111,7 +111,7 @@
             </div>
             <nav>
               <ol class="breadcrumb justify-content-center mb-0">
-                <li class="breadcrumb-item"><a href="home-modern.html">Home</a></li>
+                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                 <li class="breadcrumb-item"><a href="about-us.html">Company</a></li>
                 <li class="breadcrumb-item active" aria-current="page">about</li>
               </ol>
