--- a/industrialpark.html
+++ b/industrialpark.html
@@ -39,7 +39,7 @@
       <nav class="navbar navbar-expand-lg sticky-navbar">
         <div class="container">
 
-          <a class="navbar-brand" href="home-modern.html">
+          <a class="navbar-brand" href="index.html">
             <img src="assets/images/logo/logo-light.png" class="logo-light" alt="logo">
             <img src="assets/images/logo/logo-dark.png" class="logo-dark" alt="logo">
           </a>
@@ -49,13 +49,13 @@
           <div class="collapse navbar-collapse" id="mainNavigation">
             <ul class="navbar-nav ml-auto">
               <li class="nav__item  has-dropdown">
-                <a href="home-modern.html"  class="nav__item-link active">Home</a>
+                <a href="index.html"  class="nav__item-link active">Home</a>
                 <!-- <ul class="dropdown-menu">
                   <li class="nav__item">
-                    <a href="home-modern.html" class="nav__item-link">Home Main</a>
+                    <a href="index.html" class="nav__item-link">Home Main</a>
                   </li>
                   <li class="nav__item">
-                    <a href="home-modern.html" class="nav__item-link">Home Modern</a>
+                    <a href="index.html" class="nav__item-link">Home Modern</a>
                   </li>
                   <li class="nav__item">
                     <a href="home-classic.html" class="nav__item-link">Home Classic</a>
@@ -228,7 +228,7 @@
             </div>
             <nav>
               <ol class="breadcrumb mb-0">
-                <li class="breadcrumb-item"><a href="home-modern.html">Home</a></li>
+                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                 <li class="breadcrumb-item"><a href="it-solutions.html">IT Solutions</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Software Dev</li>
               </ol>
