--- a/oxygen.html
+++ b/oxygen.html
@@ -39,7 +39,7 @@
       <nav class="navbar navbar-expand-lg sticky-navbar">
         <div class="container">
 
-          <a class="navbar-brand" href="home-modern.html">
+          <a class="navbar-brand" href="index.html">
             <img src="assets/images/logo/logo-dark1.png" class="logo-light" alt="logo">
             <img src="assets/images/logo/logo-dark1.png" class="logo-dark" alt="logo">
           </a>
@@ -49,7 +49,7 @@
           <div class="collapse navbar-collapse" id="mainNavigation">
             <ul class="navbar-nav ml-auto">
               <li class="nav__item ">
-                <a href="home-modern.html" class="nav__item-link ">Home</a>
+                <a href="index.html" class="nav__item-link ">Home</a>
               </li>
 
               <li class="nav__item  has-dropdown">
@@ -113,7 +113,7 @@
             </div>
             <nav>
               <ol class="breadcrumb mb-0">
-                <li class="breadcrumb-item"><a href="home-modern.html">Home</a></li>
+                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                 <li class="breadcrumb-item"><a href="it-solutions.html">IT Solutions</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Software Dev</li>
               </ol>
