--- a/coming-soon.html
+++ b/coming-soon.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <meta name="description" content="Smart Data  IT Solutions &  Services Template">
+  <meta name="description" content="Oxygen Park">
   <link href="assets/images/favicon/favicon.png" rel="icon">
-  <title>Smart Data IT Solutions & Services Template</title>
+  <title>Oxygen Park</title>
 
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;600;700;800;900&family=Roboto:wght@400;700&display=swap">
@@ -18,29 +18,142 @@
 
 <body>
   <div class="wrapper">
+    <div class="preloader">
+      <div class="sk-cube-grid">
+        <span class="sk-cube"></span>
+        <span class="sk-cube"></span>
+        <span class="sk-cube"></span>
+        <span class="sk-cube"></span>
+        <span class="sk-cube"></span>
+        <span class="sk-cube"></span>
+        <span class="sk-cube"></span>
+        <span class="sk-cube"></span>
+        <span class="sk-cube"></span>
+      </div>
+    </div><!-- /.preloader -->
+
+    <!-- =========================
+        Header 
+    =========================== -->
+    <header class="header header-light header-light-has-topbar">
+
+      <nav class="navbar navbar-expand-lg sticky-navbar">
+        <div class="container">
+
+          <a class="navbar-brand" href="index.html">
+            <img src="assets/images/logo/logo-light.png" class="logo-light" alt="logo">
+            <img src="assets/images/logo/logo-dark1.png" class="logo-dark" alt="logo">
+          </a>
+          <button class="navbar-toggler" type="button">
+            <span class="menu-lines"><span></span></span>
+          </button>
+          <div class="collapse navbar-collapse" id="mainNavigation">
+            <ul class="navbar-nav ml-auto">
+              <!-- <li class="nav__item">
+                <a href="index.html" class="nav__item-link active">Home</a>
+              </li> -->
+              <li class="nav__item ">
+                <a href="index.html" class="nav__item-link">
+                <img src="assets/images/o2.png" alt="">
+                </a>
+              </li>
+              <li class="nav__item  has-dropdown">
+                <a href="index.html" data-toggle="dropdown" class="dropdown-toggle nav__item-link active">Home</a>
+                <ul class="dropdown-menu wide-dropdown-menu">
+                  <li class="nav__item">
+                    <div class="row mx-0">
+                      <div class="col-sm-12 dropdown-menu-col">
+                        <ul class="nav flex-column">
+                          <li class="nav__item"><a class="nav__item-link" href="oxygen.html">Oxygen Purodhyan</a>
+                          </li>
+                          <li class="nav__item"><a class="nav__item-link" href="abcRetreat.html">ABC Retreat</a>
+                          </li>
+                          <li class="nav__item"><a class="nav__item-link" href="industrialpark.html">Industrial Park</a>
+                          </li>
+                          <li class="nav__item"><a class="nav__item-link" href="coming-soon.html">O2 Haat ( e-commerce platform)</a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav__item  has-dropdown">
+                <a href="about-us.html" data-toggle="dropdown" class="dropdown-toggle nav__item-link">Who We Are?</a>
+                <ul class="dropdown-menu wide-dropdown-menu">
+                  <li class="nav__item">
+                    <div class="row mx-0">
+                      <div class="col-sm-12 dropdown-menu-col">
+                        <ul class="nav flex-column">
+                          <li class="nav__item"><a class="nav__item-link" href="leadership-team.html">Our Team</a>
+                          </li>
+                          <li class="nav__item"><a class="nav__item-link" href="skills.html">Skill & Certification</a>
+                          </li>
+                          <li class="nav__item"><a class="nav__item-link" href="recognition.html">Recognition</a>
+                          </li>
+                          <li class="nav__item"><a class="nav__item-link" href="#">Partner & Franchise</a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav__item  has-dropdown">
+                <a href="initiative.html" data-toggle="dropdown" class="dropdown-toggle nav__item-link">What We Do?</a>
+                <ul class="dropdown-menu wide-dropdown-menu">
+                  <li class="nav__item">
+                    <div class="row mx-0">
+                      <div class="col-sm-12 dropdown-menu-col">
+                        <ul class="nav flex-column">
+                          <li class="nav__item"><a class="nav__item-link" href="initiative.html">Major Initiative</a>
+                          </li>
+                          <li class="nav__item"><a class="nav__item-link" href="collective.html">Collective Ventures</a>
+                          </li>
+                          <li class="nav__item"><a class="nav__item-link" href="agro.html">Agro Research & Development</a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav__item ">
+                <a href="whyus.html" class="nav__item-link">Why Us?</a>
+              </li>
+              <!-- <li class="nav__item">
+                <a href="about-us.html" class="nav__item-link">Who we are ! </a>
+              </li>
+              <li class="nav__item">
+                <a href="initiative.html" class="nav__item-link">Initiative</a>
+              </li> -->
+            </ul>
+          </div>
+          <ul class="navbar-actions list-unstyled mb-0 d-flex align-items-center">
+            <li class="d-none d-xl-block">
+              <a href="contact-us.html" class="btn action__btn-contact">Connect With Nature</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+<body>
+  <div class="wrapper">
 
     <!-- ==========================
         coming soon
     =========================== -->
-    <section class="coming-soon py-0 bg-overlay bg-overlay-2">
-      <div class="bg-img"><img src="assets/images/banners/1.jpg" alt="background"></div>
+    <section class="coming-soon">
+      <div class="bg-img"  style="max-height: 10rem !important;"><img src="assets/images/sliders/3.jpg" alt="background"></div>
       <div class="container">
         <div class="row">
-          <div class="col-sm-12 col-md-12 col-lg-6 d-flex align-items-center vh-100">
+          <div class="col-sm-12 col-md-12 col-lg-12 d-flex align-items-center vh-50">
             <div>
-              <h2 class="error__title">Help Challenge Critical Activities</h2>
-              <p class="error__desc mb-50">We are experienced professionals who understand that It services is changing,
-                and
-                are true partners who care about your success. Our team provides a consultative approach on emerging
-                technology.
+              <h2 class="error__title">O2 Haat ( E-Commerce Platform)</h2>
+              <p class="error__desc mb-50">Comming Soon
               </p>
-              <form class="subscribe__form d-flex" id="contactForm" method="post" action="assets/php/contact.php">
-                <input type="email" class="form-control mr-20" placeholder="Your Email Address" id="contact-email"
-                  name="contact-email" required>
-                <button type="submit" class="btn btn__primary btn__icon">
-                  <span>Subscribe</span><i class="icon-arrow-right"></i>
-                </button>
-              </form>
+
               <div class="contact-result"></div>
             </div>
           </div><!-- /.col-lg-7 -->
