--- a/blog.html
+++ b/blog.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <meta name="description" content="Smart Data  IT Solutions &  Services Template">
+  <meta name="description" content="Oxygen Park">
   <link href="assets/images/favicon/favicon.png" rel="icon">
-  <title>Smart Data IT Solutions & Services Template</title>
+  <title>Oxygen Park</title>
 
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;600;700;800;900&family=Roboto:wght@400;700&display=swap">
